Finished COIN-based model description

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -356,6 +356,23 @@
   abstract = {Author Summary Numerous choice tasks have been used to study decision processes. Some of these choice tasks, specifically n-armed bandit, information sampling and foraging tasks, pose choices that trade-off immediate and future reward. Specifically, the best choice may not be the choice that pays off the highest reward immediately, and exploration of unknown options vs. exploiting known options can be a normatively useful strategy. We characterized the optimal choice strategies across these tasks using Markov Decision Processes (MDPs). The MDP framework can characterize optimal choice strategies when choices are affected by the value of future rewards. We found that uncertainty and time horizon have important effects on the choice strategies in these tasks. Specifically, in bandit and information sampling tasks, increasing uncertainty increases the value of exploring choice options that tend to pay off in the future, while decreasing uncertainty increases the value of choice options that pay off immediately. These effects are increased when time horizons are longer. Foraging tasks differ in that uncertainty plays a minimal role. However, time horizon is still important in foraging. Specifically, for long time horizons, travel delays to rewards become less relevant.}
 }
 
+@article{Avraham_Reexposure_2021,
+  title = {Reexposure to a Sensorimotor Perturbation Produces Opposite Effects on Explicit and Implicit Learning Processes},
+  author = {Avraham, Guy and Morehead, J. Ryan and Kim, Hyosub E. and Ivry, Richard B.},
+  year = {2021},
+  month = mar,
+  journal = {PLOS Biology},
+  volume = {19},
+  number = {3},
+  pages = {e3001147},
+  publisher = {{Public Library of Science}},
+  issn = {1545-7885},
+  doi = {10.1371/journal.pbio.3001147},
+  abstract = {The motor system demonstrates an exquisite ability to adapt to changes in the environment and to quickly reset when these changes prove transient. If similar environmental changes are encountered in the future, learning may be faster, a phenomenon known as savings. In studies of sensorimotor learning, a central component of savings is attributed to the explicit recall of the task structure and appropriate compensatory strategies. Whether implicit adaptation also contributes to savings remains subject to debate. We tackled this question by measuring, in parallel, explicit and implicit adaptive responses in a visuomotor rotation task, employing a protocol that typically elicits savings. While the initial rate of learning was faster in the second exposure to the perturbation, an analysis decomposing the 2 processes showed the benefit to be solely associated with explicit re-aiming. Surprisingly, we found a significant decrease after relearning in aftereffect magnitudes during no-feedback trials, a direct measure of implicit adaptation. In a second experiment, we isolated implicit adaptation using clamped visual feedback, a method known to eliminate the contribution of explicit learning processes. Consistent with the results of the first experiment, participants exhibited a marked reduction in the adaptation function, as well as an attenuated aftereffect when relearning from the clamped feedback. Motivated by these results, we reanalyzed data from prior studies and observed a consistent, yet unappreciated pattern of attenuation of implicit adaptation during relearning. These results indicate that explicit and implicit sensorimotor processes exhibit opposite effects upon relearning: Explicit learning shows savings, while implicit adaptation becomes attenuated},
+  langid = {english},
+  keywords = {Analysis of variance,Clustering algorithms,Eye movements,Human learning,Learning,Permutation,Phase determination,Reaction time}
+}
+
 @article{Ayhan_application_2011,
   title = {An Application of Small-World Cellular Neural Networks on Odor Classification},
   author = {Ayhan, Tuba},
@@ -2857,7 +2874,7 @@
 
 @article{Dolan_Goals_2013,
   title = {Goals and {{Habits}} in the {{Brain}}},
-  author = {Dolan, Ray J. and Dayan, Peter},
+  author = {Dolan, Ray~J. and Dayan, Peter},
   year = {2013},
   month = oct,
   journal = {Neuron},
@@ -3079,7 +3096,7 @@
 
 @article{Ebitz_Neuronal_2015a,
   title = {Neuronal {{Activity}} in {{Primate Dorsal Anterior Cingulate Cortex Signals Task Conflict}} and {{Predicts Adjustments}} in {{Pupil-Linked Arousal}}},
-  author = {Ebitz, R. Becket and Platt, Michael L.},
+  author = {Ebitz, R. Becket and Platt, Michael~L.},
   year = {2015},
   month = feb,
   journal = {Neuron},
@@ -3093,7 +3110,7 @@
 
 @article{Ebitz_Neuronal_2015b,
   title = {Neuronal {{Activity}} in {{Primate Dorsal Anterior Cingulate Cortex Signals Task Conflict}} and {{Predicts Adjustments}} in {{Pupil-Linked Arousal}}},
-  author = {Ebitz, R. Becket and Platt, Michael L.},
+  author = {Ebitz, R. Becket and Platt, Michael~L.},
   year = {2015},
   month = feb,
   journal = {Neuron},
@@ -5084,7 +5101,7 @@
 @article{Huang_Rethinking_2011,
   title = {Rethinking {{Motor Learning}} and {{Savings}} in {{Adaptation Paradigms}}: {{Model-Free Memory}} for {{Successful Actions Combines}} with {{Internal Models}}},
   shorttitle = {Rethinking {{Motor Learning}} and {{Savings}} in {{Adaptation Paradigms}}},
-  author = {Huang, Vincent S. and Haith, Adrian and Mazzoni, Pietro and Krakauer, John W.},
+  author = {Huang, Vincent~S. and Haith, Adrian and Mazzoni, Pietro and Krakauer, John~W.},
   year = {2011},
   month = may,
   journal = {Neuron},
@@ -5353,6 +5370,21 @@
   doi = {10.1038/35058500},
   abstract = {Five important trends have emerged from recent work on computational models of focal visual attention that emphasize the bottom-up, image-based control of attentional deployment. First, the perceptual saliency of stimuli critically depends on the surrounding context. Second, a unique 'saliency map' that topographically encodes for stimulus conspicuity over the visual scene has proved to be an efficient and plausible bottom-up control strategy. Third, inhibition of return, the process by which the currently attended location is prevented from being attended again, is a crucial element of attentional deployment. Fourth, attention and eye movements tightly interplay, posing computational challenges with respect to the coordinate system used to control attention. And last, scene understanding and object recognition strongly constrain the selection of attended locations. Insights from these five key areas provide a framework for a computational and neurobiological understanding of visual attention.},
   copyright = {\textcopyright{} 2001 Nature Publishing Group},
+  langid = {english}
+}
+
+@article{Iwamoto_Saccade_2010,
+  title = {Saccade Adaptation as a Model of Learning in Voluntary Movements},
+  author = {Iwamoto, Yoshiki and Kaku, Yuki},
+  year = {2010},
+  month = jul,
+  journal = {Experimental Brain Research},
+  volume = {204},
+  number = {2},
+  pages = {145--162},
+  issn = {1432-1106},
+  doi = {10.1007/s00221-010-2314-3},
+  abstract = {Motor learning ensures the accuracy of our daily movements. However, we know relatively little about its mechanisms, particularly for voluntary movements. Saccadic eye movements serve to bring the image of a visual target precisely onto the fovea. Their accuracy is maintained not by on-line sensory feedback but by a learning mechanism, called saccade adaptation. Recent studies on saccade adaptation have provided valuable additions to our knowledge of motor learning. This review summarizes what we know about the characteristics and neural mechanisms of saccade adaptation, emphasizing recent findings and new ideas. Long-term adaptation, distinct from its short-term counterpart, seems to be present in the saccadic system. Accumulating evidence indicates the involvement of the oculomotor cerebellar vermis as a learning site. The superior colliculus is now suggested not only to generate saccade commands but also to issue driving signals for motor learning. These and other significant contributions have advanced our understanding of saccade adaptation and motor learning in general.},
   langid = {english}
 }
 
@@ -6048,7 +6080,7 @@
 
 @article{Kolling_Multiple_2014,
   title = {Multiple {{Neural Mechanisms}} of {{Decision Making}} and {{Their Competition}} under {{Changing Risk Pressure}}},
-  author = {Kolling, Nils and Wittmann, Marco and Rushworth, Matthew F. S.},
+  author = {Kolling, Nils and Wittmann, Marco and Rushworth, Matthew~F. S.},
   year = {2014},
   month = mar,
   journal = {Neuron},
@@ -6356,7 +6388,7 @@
 
 @article{Lak_Orbitofrontal_2014,
   title = {Orbitofrontal {{Cortex Is Required}} for {{Optimal Waiting Based}} on {{Decision Confidence}}},
-  author = {Lak, Armin and Costa, Gil M. and Romberg, Erin and Koulakov, Alexei A. and Mainen, Zachary F. and Kepecs, Adam},
+  author = {Lak, Armin and Costa, Gil~M. and Romberg, Erin and Koulakov, Alexei~A. and Mainen, Zachary~F. and Kepecs, Adam},
   year = {2014},
   month = oct,
   journal = {Neuron},
@@ -6903,6 +6935,21 @@
   pmcid = {PMC6917703},
   pmid = {31848395},
   keywords = {Adult,Female,Humans,kalman filter,Male,Movement,Psychomotor Performance,Saccades}
+}
+
+@article{Luo_Constrained_2013,
+  title = {Constrained {{State Estimation}} for {{Nonlinear Systems}} with {{Unknown Input}}},
+  author = {Luo, Zhen and Fang, Huajing and Luo, Yuanhao},
+  year = {2013},
+  month = oct,
+  journal = {Circuits, Systems, and Signal Processing},
+  volume = {32},
+  number = {5},
+  pages = {2199--2211},
+  issn = {1531-5878},
+  doi = {10.1007/s00034-013-9559-6},
+  abstract = {This paper extends the problem of state estimation for linear discrete-time systems with unknown input to the nonlinear systems. Based on physical consideration, the constraints of state are also considered. And the constraints which can improve the quality of estimation are imposed on individual updated sigma points as well as the updated state. The advantage of algorithm is that it is able to deal with arbitrary constraints on the states during the estimation procedure, Least-squares unbiased estimation algorithm can be used to obtain unknown input, and the unknown input which can be any signal affects both the system and the outputs. The state estimation problem is transformed into a standard Unscented Kalman filter problem which can easily be solved. Simulations are provided to demonstrate the effectiveness of the theoretical results.},
+  langid = {english}
 }
 
 @article{Luo_Generating_2010,
@@ -7674,7 +7721,7 @@
 @article{Miura_Odor_2012,
   title = {Odor {{Representations}} in {{Olfactory Cortex}}: {{Distributed Rate Coding}} and {{Decorrelated Population Activity}}},
   shorttitle = {Odor {{Representations}} in {{Olfactory Cortex}}},
-  author = {Miura, Keiji and Mainen, Zachary F. and Uchida, Naoshige},
+  author = {Miura, Keiji and Mainen, Zachary~F. and Uchida, Naoshige},
   year = {2012},
   month = jun,
   journal = {Neuron},
@@ -8369,7 +8416,7 @@
 @article{Pearson_Decision_2014,
   title = {Decision {{Making}}: {{The Neuroethological Turn}}},
   shorttitle = {Decision {{Making}}},
-  author = {Pearson, John M. and Watson, Karli K. and Platt, Michael L.},
+  author = {Pearson, John~M. and Watson, Karli~K. and Platt, Michael~L.},
   year = {2014},
   month = jun,
   journal = {Neuron},
@@ -8684,7 +8731,7 @@
 
 @article{Puig_Role_2012,
   title = {The {{Role}} of {{Prefrontal Dopamine D1 Receptors}} in the {{Neural Mechanisms}} of {{Associative Learning}}},
-  author = {Puig, M. Victoria and Miller, Earl K.},
+  author = {Puig, M. Victoria and Miller, Earl~K.},
   year = {2012},
   month = jun,
   journal = {Neuron},
@@ -9122,7 +9169,7 @@
 
 @article{Salamone_Mysterious_2012,
   title = {The {{Mysterious Motivational Functions}} of {{Mesolimbic Dopamine}}},
-  author = {Salamone, John D. and Correa, Merc{\`e}},
+  author = {Salamone, John~D. and Correa, Merc{\`e}},
   year = {2012},
   month = nov,
   journal = {Neuron},
@@ -9773,7 +9820,7 @@
 @article{Shenhav_Expected_2013,
   title = {The {{Expected Value}} of {{Control}}: {{An Integrative Theory}} of {{Anterior Cingulate Cortex Function}}},
   shorttitle = {The {{Expected Value}} of {{Control}}},
-  author = {Shenhav, Amitai and Botvinick, Matthew M. and Cohen, Jonathan D.},
+  author = {Shenhav, Amitai and Botvinick, Matthew~M. and Cohen, Jonathan~D.},
   year = {2013},
   month = jul,
   journal = {Neuron},
@@ -9788,7 +9835,7 @@
 @article{Shenhav_Expected_2013a,
   title = {The {{Expected Value}} of {{Control}}: {{An Integrative Theory}} of {{Anterior Cingulate Cortex Function}}},
   shorttitle = {The {{Expected Value}} of {{Control}}},
-  author = {Shenhav, Amitai and Botvinick, Matthew M. and Cohen, Jonathan D.},
+  author = {Shenhav, Amitai and Botvinick, Matthew~M. and Cohen, Jonathan~D.},
   year = {2013},
   month = jul,
   journal = {Neuron},
@@ -10387,7 +10434,7 @@
 
 @article{Tervo_Behavioral_2014,
   title = {Behavioral {{Variability}} through {{Stochastic Choice}} and {{Its Gating}} by {{Anterior Cingulate Cortex}}},
-  author = {Tervo, Dougal G. R. and Proskurin, Mikhail and Manakov, Maxim and Kabra, Mayank and Vollmer, Alison and Branson, Kristin and Karpova, Alla Y.},
+  author = {Tervo, Dougal~G. R. and Proskurin, Mikhail and Manakov, Maxim and Kabra, Mayank and Vollmer, Alison and Branson, Kristin and Karpova, Alla~Y.},
   year = {2014},
   month = sep,
   journal = {Cell},
@@ -10818,6 +10865,22 @@
   author = {Wan, Eric A. and {van der Merwe}, Rudolph},
   year = {2001},
   publisher = {{John Wiley \& Sons, Inc.}}
+}
+
+@incollection{Wan_Unscented_2001a,
+  title = {The {{Unscented Kalman Filter}}},
+  booktitle = {Kalman {{Filtering}} and {{Neural Networks}}},
+  author = {Wan, Eric A. and {van der Merwe}, Rudolph},
+  year = {2001},
+  pages = {221--280},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  doi = {10.1002/0471221546.ch7},
+  abstract = {This chapter discusses the underlying assumptions and flaws in the EKF, and presents an alternative filter with performance superior to that of the EKF: the unscented Kalman filter (UKF). Three application areas of nonlinear estimation in which the EKF has been applied are covered as follows: state estimation, parameter estimation, and dual estimation. An overview of the framework for these areas is briefly reviewed.},
+  chapter = {7},
+  isbn = {978-0-471-22154-8},
+  langid = {english},
+  keywords = {dual estimation,EKF,optimal recursive estimation,particle filter,UKF parameter estimation,unscented Kalman filter,UPF experiments},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/0471221546.ch7}
 }
 
 @article{Wang_Concurrent_2014,
